# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "webserver"

[dependencies]

[package]
name = "webserver"
version = "0.1.0"
edition = "2021"
authors = ["lamhai1401 <lamthanhhai141@gmail.com>"]
readme = "README.md"
homepage = "github.com/lamhai1401/phx-channel"
repository = "github.com/lamhai1401/phx-channel"
