# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "webserver"

[dependencies]
actix-cors = "0.1.0"
actix-web = "4.0.1"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.80"
dotenv = "0.15.0"
uuid = { version = "1.1.0", features = ["serde", "v4"] }

[package]
name = "webserver"
version = "0.1.0"
edition = "2021"
authors = ["lamhai1401 <lamthanhhai141@gmail.com>"]
readme = "README.md"
homepage = "github.com/lamhai1401/phx-channel"
repository = "github.com/lamhai1401/phx-channel"
